--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ h2 {
     margin-top: 1em;
     margin-left: 5.9em;
     margin-right: 5.9em;
+    color: #2a64ad;
 }
 
 hr {
@@ -52,7 +53,8 @@ hr {
     margin-left: 4.8em;
     margin-right: 4.8em;
     border-style: solid;
-    border-width: 2px;
+    border-width: 1px;
+    color: #2a64ad;
 }
 
 .img1 {
